--- a/public/db/app.json
+++ b/public/db/app.json
@@ -2,31 +2,31 @@
   "tables": [
     {
       "id": "1",
-      "status": "Busy",
-      "peopleAmount": "2",
-      "maxPeopleAmount": "4",
-      "bill": "20"
+      "status": "Reserved",
+      "peopleAmount": 1,
+      "maxPeopleAmount": 5,
+      "bill": "19"
     },
     {
       "id": "2",
       "status": "Free",
       "peopleAmount": 0,
-      "maxPeopleAmount": 3,
-      "bill": 0
+      "maxPeopleAmount": 4,
+      "bill": "10"
     },
     {
       "id": "3",
-      "status": "Busy",
-      "peopleAmount": 2,
-      "maxPeopleAmount": 3,
-      "bill": 45
-    },
-    {
-      "id": "4",
       "status": "Cleaning",
       "peopleAmount": 0,
       "maxPeopleAmount": 3,
-      "bill": 0
+      "bill": "44"
+    },
+    {
+      "id": "4",
+      "status": "Busy",
+      "peopleAmount": 0,
+      "maxPeopleAmount": 5,
+      "bill": "10"
     }
   ]
 }
