--- a/public/db/app.json
+++ b/public/db/app.json
@@ -27,6 +27,13 @@
       "peopleAmount": 0,
       "maxPeopleAmount": 5,
       "bill": "10"
+    },
+    {
+      "id": "5",
+      "status": "Busy",
+      "peopleAmount": 0,
+      "maxPeopleAmount": 5,
+      "bill": "10"
     }
   ]
 }
